--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "unisharp/laravel-ckeditor": "^4.7",
+        "maatwebsite/excel": "~2.1.0",
         "yajra/laravel-datatables-oracle": "~8.0"
     },
     "require-dev": {
